syntax = "proto3";

package homework.pickpoints.v1;
option go_package = "homework/pickpoints/v1;pickpoint_pb";

import "google/api/annotations.proto";

service PickPoints {
    rpc Read(ReadRequest) returns (ReadResponse) {
        option (google.api.http) = {
            get: "/v1/pickpoint/{id}" // in developing
        };
    }
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message ReadRequest {
    int64 id = 1;
}

message ReadResponse {
    PickPoint point = 1;
}

message CreateRequest {
    PickPoint point = 1;
}

message CreateResponse {
    PickPoint point = 1;
}

message UpdateRequest {
    PickPoint point = 1;
}

message UpdateResponse {
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {
}

message PickPoint {
    int64 id = 1;
    string name = 2;
    string address = 3;
    string contact = 4;
}
